--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
             <div 
-                v-for="variant in variants" 
-                :key="variant.id">{{ variant.color }}
+                v-for="variant in variants"
+                :key="variant.id"
+                @mouseover="changeImage(variant.image)"
+                class="color-circle"
+                :style="{backgroundColor: variant.color}">{{ variant.id }}
                 
             </div>
-            <button class="button" @click="addToCart()">Add to Cart</button>
+            <button
+              :disabled="!inStock"
+              class="button" @click="addToCart()">Add to Cart</button>
           </div>
         </div>
       </div>
